Crash when editing vertex groups in 2.79b and 2.8 #56108

Closed
opened 2018-07-26 09:59:50 +02:00 by Xury Greer · 5 comments

System Information
Windows 10 Pro

Blender Version
Broken: (2.79a 8928d99270 AND 2.8 dc123ac9e5)

Short description of error
Both Blender 2.79a and 2.8 Alpha crash when trying to reorder or mirror this particular model's Vertex Groups.

Exact steps for others to reproduce the error
VertexDataCrash.blend In the Object Data tab of the properties editor, move a vertex group up or down the list. or use other features from the drop down list like mirroring or sorting the vertex groups. Instant crash every time.

Additional info
This model was created in 2.79a. It was not the only model in the scene but it is the only one with this problem. The file I have uploaded here was copied into a fresh scene in Blender 2.8, and the problem persists. Before this started happening I attached an armature modifier with an armature that was already being used to animate other models in the scene. However none of the other models have this problem. I have not included anything else from the scene since these models are for a commercial project. X mirror was being used on the project, but was not turned on when the problem started. I have been using a custom color ramp for weight painting, but I doubt that has anything to do with it.

**System Information** Windows 10 Pro **Blender Version** Broken: (2.79a 8928d99270f AND 2.8 dc123ac9e5a) **Short description of error** Both Blender 2.79a and 2.8 Alpha crash when trying to reorder or mirror this particular model's Vertex Groups. **Exact steps for others to reproduce the error** [VertexDataCrash.blend](https://archive.blender.org/developer/F4044892/VertexDataCrash.blend) In the Object Data tab of the properties editor, move a vertex group up or down the list. or use other features from the drop down list like mirroring or sorting the vertex groups. Instant crash every time. **Additional info** This model was created in 2.79a. It was not the only model in the scene but it is the only one with this problem. The file I have uploaded here was copied into a fresh scene in Blender 2.8, and the problem persists. Before this started happening I attached an armature modifier with an armature that was already being used to animate other models in the scene. However none of the other models have this problem. I have not included anything else from the scene since these models are for a commercial project. X mirror was being used on the project, but was not turned on when the problem started. I have been using a custom color ramp for weight painting, but I doubt that has anything to do with it.
Author

Added subscriber: @Xury46

Added subscriber: @Xury46

Added subscriber: @ideasman42

Added subscriber: @ideasman42

This file is corrupt, there is a vertex group index of -2074087088.

The real fix should be to find out why corrupt weights are created in the first place.

Nevertheless, I've attached a possible workaround for the crash.

This file is corrupt, there is a vertex group index of `-2074087088`. The real fix should be to find out why corrupt weights are created in the first place. Nevertheless, I've attached a possible workaround for the crash.
Campbell Barton was assigned by Bastien Montagne 2018-07-30 10:16:28 +02:00
Campbell Barton was unassigned by Dalai Felinto 2019-12-23 16:36:04 +01:00

This issue was referenced by ad2a8400e9

This issue was referenced by ad2a8400e9a263acf924311ce1fb050b0e1eb415

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Campbell Barton self-assigned this 2020-02-11 03:22:17 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#56108
No description provided.